tests/typecheck/bad/builtin-bech32-1.scilexp
(* Below address is not ByStr20 but is ByStr21, so it should fail type check. *)
let bystr20_addr = 0x7aa7ea9f4534d8d70224b9c2fb165242f321f12bff in
let prefix = "zzil" in
builtin bystr20_to_bech32 prefix bystr20_addr
